completed base html files. added new js files

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,26 @@
-h1 {
-  color: green;
+body {
+  margin: 72px;
 }
 
+h1 {
+  color: navy;
+  position: relative;
+}
+
+.logo {
+  width: 80px;
+  float: left;
+}
+
+li {
+  border: 3px solid black;
+  border-radius: 8px;
+  display: inline-block;
+  padding: 10px;
+  margin: 0 20px 20px 0;
+}
+
+.button {
+  background-color: white;
+  padding: 3px;
+}
